continued updates and cleaning for BLS

--- a/mainERLATFEED.ipynb
+++ b/mainERLATFEED.ipynb
@@ -6,40 +6,24 @@
    "metadata": {},
    "source": [
     "**Title** mainERLATFEED\n",
-    "\r",
+    "\n",
     "**Description**: This is the primary script for Hannah Clayton's analysis of gray whale feeding events. It serves as a place to run all the necessary sub functions such as audits and flukebeat detection. Some components require going to MATLAB and returning with inputs.\n",
     "\n",
     "**Author:** Hannah Clayton\n",
-    "\r",
+    "\n",
     "**About:** \n",
     "\n",
-    "**% Requites:**\n",
+    "**Requites:**\n",
     "\n",
     "**Notes:**\n",
-    "**\n",
-    "- 01.25.2024. HMC initialized scr%\r\n",
-    "%\r\n",
-    "%"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "595d36e2-dd62-4634-a47f-bc02db3631c4",
-   "metadata": {},
-   "source": [
-    "**Analysis workflow**\n",
-    "Stage 1:\n",
-    "1. (MATLAB) Kinematic audit of feeding events via 'kinaud-ERLATFEED.mat' script.\n",
-    "2. (Python) Cam confirmation from BORIS audits\n",
-    "3. (Python) Expert confirmation\n",
-    "4. (Python) Pit creation audit\n",
-    "5. (MATLAB) Fluke detection\n",
-    "6. (Python) Statistical analysis - individual level\n",
-    "Stage 2: \n",
-    "7. (Python) Behavior characterization - group level\n",
-    "8. (Python) Assess individual variation\n",
-    "9. (Python) Assess environmental covariates\n",
-    "10. (?) Generate manuscript figures"
+    "- 01.25.2024. HMC initialized script.\n",
+    "- 03.01.2024. HMC. Polishing code for public git repo for BLS2024.\n",
+    "\n",
+    "**To-do:**\n",
+    "- Change importing final feed to only input if it exists, otherwise it throw\n",
+    "\n",
+    "**Known Bugs***\n",
+    "- Plotting of BORIS observations sometimes do not seem to line up exactly. Only seems to be an issue in deployments where videos were fragmented and there was potentially an offset that needs to be addressed."
    ]
   },
   {
@@ -61,7 +45,6 @@
     "from datetime import timedelta\n",
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
-    "from ipywidgets import Button, Layout\n",
     "import mplcursors\n",
     "import os\n",
     "from itertools import chain\n",
@@ -72,13 +55,13 @@
     "import matplotlib.dates as mdates\n",
     "import seaborn as sns\n",
     "import random\n",
-    "import ipywidgets as widgets\n",
     "import csv\n",
     "import scipy\n",
     "import math as m\n",
+    "from ipywidgets import interact, widgets, Layout, Button\n",
+    "import random\n",
     "\n",
-    "\n",
-    "%run mutateBORISandVID.ipynb\n",
+    "%run fxBORIS.ipynb                   \n",
     "%run getfeedBORISObs.ipynb\n",
     "%run makePRHObs.ipynb\n",
     "%run plotBORISObsDepthRoll.ipynb\n",
@@ -99,7 +82,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Which deployment is being analyzed? er230416-70\n"
@@ -117,60 +100,54 @@
    "source": [
     "# -- LOAD DATA -- #\n",
     "# ------------------------ User defined variables --------------------------------------- #\n",
-    "fs = 10 # What's the sampling rate of the prh/speed file you want to pull?\n",
-    "os.chdir('C:\\\\01_Work\\\\1Project Home\\\\1Research\\\\GRAYS\\\\_ERLATFEED')\n",
+    "fs = 10                                                                                         # What's the sampling rate of the prh/speed file you want to pull? (in Hz)\n",
+    "os.chdir('C:\\\\01_Work\\\\1Project Home\\\\1Research\\\\GRAYS\\\\_ERLATFEED')                            # path to master project folder\n",
+    "depID = input('Which deployment is being analyzed?')                                            # get the deployment ID for naming and pulling files\n",
     "# --------------------------------------------------------------------------------------- #\n",
-    "datpth = \"C:\\\\01_Work\\\\1Project Home\\\\1Research\\\\GRAYS\\\\_tag data\\\\\"\n",
-    "cdir = str(os.getcwd())\n",
+    "datpth = \"C:\\\\01_Work\\\\1Project Home\\\\1Research\\\\GRAYS\\\\_tag data\\\\\"                            # path to tag data with by-deployment structures\n",
+    "cdir = str(os.getcwd())                                                                         # your current drive \n",
+    "outloc = str(cdir + '\\\\analysisoutput\\\\' + depID + \"\\\\\")                                        # path to output files\n",
     "\n",
-    "depID = input('Which deployment is being analyzed?')                                           # get the deployment ID for naming and pulling files\n",
-    "prh = scio.loadmat(datpth + depID + \"\\\\\" + depID + \" 10Hzprh.mat\")       # prh file\n",
-    "#speed = scio.loadmat(datpth + depID + \"\\\\\" + depID + \"_10HzSpeed.mat\")   # speed file\n",
-    "#speed = pd.DataFrame(speed['spd'])                                             # \n",
-    "feed = pd.read_csv(datpth + depID + \"\\\\feed\\\\\"+ depID + \"_rolls.csv\")         # feeding file\n",
-    "finalfeed = pd.read_excel(cdir + '\\\\analysisoutput\\\\'+depID+'\\\\'+depID+'-feed+tide.xlsx')\n",
-    "dems = pd.read_excel(\"C:\\\\01_Work\\\\1Project Home\\\\1Research\\\\GRAYS\\\\mastertracker_GRAYS.xlsx\") # demographic information\n",
-    "mastfeed = pd.read_excel(cdir + '\\\\analysisoutput\\\\master-feed+tide.xlsx')\n",
-    "mastsum = pd.read_excel(cdir + '\\\\analysisoutput\\\\master-sumfeed.xlsx')\n",
-    "\n",
-    "# SET UP OUTPUT DIR IF NEEDED\n",
-    "outloc = str(cdir + '\\\\analysisoutput\\\\' + depID + \"\\\\\")                                       # path to output files\n",
-    "if os.path.exists(outloc) == False:\n",
+    "# CREATE A OUTPUT DIR IF IT DOESN'T EXIST\n",
+    "if os.path.exists(outloc) == False:                                             \n",
     "    os.mkdir(outloc)\n",
     "    os.mkdir(outloc+\"\\\\rejected rolls\\\\\")\n",
     "else:\n",
     "    print('Output directory already exists...')\n",
     "\n",
-    "# IF THERE IS NO VIDEO DATA FOR THIS DEP SKIP NEXT CELL\n",
+    "prh = scio.loadmat(datpth + depID + \"\\\\\" + depID + \" 10Hzprh.mat\")                              # prh file\n",
+    "#speed = scio.loadmat(datpth + depID + \"\\\\\" + depID + \"_10HzSpeed.mat\")                         # speed file\n",
+    "#speed = pd.DataFrame(speed['spd'])                                                             # fix importing from matlab\n",
+    "feed = pd.read_csv(datpth + depID + \"\\\\feed\\\\\"+ depID + \"_rolls.csv\")                           # file exported from matlab with all 'possible' feeding events \n",
+    "dems = pd.read_excel(\"C:\\\\01_Work\\\\1Project Home\\\\1Research\\\\GRAYS\\\\mastertracker_GRAYS.xlsx\")  # demographic information\n",
+    "mastfeed = pd.read_excel(cdir + '\\\\analysisoutput\\\\master-feed+tide.xlsx')                      # excel file with all feeding data from all deployments \n",
+    "mastsum = pd.read_excel(cdir + '\\\\analysisoutput\\\\master-sumfeed.xlsx')                         # master summary data\n",
+    "\n",
+    "#\n",
+    "finfeed = str(cdir + '\\\\analysisoutput\\\\'+depID+'\\\\'+depID+'-feed+tide.xlsx')\n",
+    "if os.path.isfile(finfeed) == True:\n",
+    "    finalfeed = pd.read_excel(cdir + '\\\\analysisoutput\\\\'+depID+'\\\\'+depID+'-feed+tide.xlsx')   # TODO! if you've already processed you can read in the final feeding structure\n",
+    "else:\n",
+    "    print('No final feed file.')\n",
+    "\n",
     "doesexist = prh.get('vidDN')\n",
+    "# IF THERE IS NO VIDEO DATA FOR DPLYMNT, SKIP\n",
     "if doesexist is None or len(doesexist) == 0:\n",
     "    nxtcell = 0\n",
     "    print('No video data to process, continue to cell 2.')\n",
     "    novid = 1\n",
+    "# IF THERE IS BORIS AUDIT FILES, LET'S PROCESS THEM\n",
     "else:\n",
-    "    nxtcell = 1\n",
-    "    novid = 0\n",
-    "    print('Video data to process, continue to cell 1.')\n",
-    "\n",
-    "# Alter these variables as needed\n",
-    "#novid = 1\n",
-    "#nxtcell = 0\n",
-    "#rolls = feed\n",
-    "#rolls['ObsInd'] = None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "751c592d-e325-4fcf-81fb-5001c44b12ef",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Alter these variables as needed\n",
-    "novid = 1\n",
-    "nxtcell = 0\n",
-    "rolls = feed\n",
-    "rolls['ObsInd'] = None"
+    "    if os.path.exists(str(datpth + depID+'\\\\BORIS\\\\') == True):\n",
+    "        nxtcell = 1\n",
+    "        novid = 0\n",
+    "        print('Video data to process, continue to cell 1.')\n",
+    "    else: \n",
+    "        print('Deployment has video, but no BORIS files found.')\n",
+    "        novid = 1\n",
+    "        nxtcell = 0\n",
+    "        rolls = feed\n",
+    "        rolls['ObsInd'] = None"
    ]
   },
   {
@@ -229,10 +206,10 @@
    ],
    "source": [
     "%matplotlib inline\n",
-    "from ipywidgets import interact, widgets, Layout\n",
-    "import random\n",
-    "#CELL2. This generates a plot of roll, triaxial accelerometer data, depth, and any video observations during the roll of interest for final expert \n",
-    "# confirmation of feeding rolls/events\n",
+    "\n",
+    "#CELL2. This generates a plot of roll, triaxial accelerometer data, depth, \n",
+    "# and any video observations during the roll of interest for final expert \n",
+    "# confirmation of feeding\n",
     "\n",
     "# checks for rejected roll file to see if this step has already been completed\n",
     "if not os.path.exists(datpth + depID + \"\\\\feed\\\\\"+ depID + \"_rejectedrolls.xlsx\"):\n",
